<resources>
    <string name="app_name">Work Tracker</string>
    <string name="main_screen_top_bar">Work Tracker</string>
    <string name="channel_id">ID</string>
    <string name="worktracker_notification_name">WorkTrackerNotification</string>
    <string name="invalid_day_of_the_week">Invalid day of the week</string>
    <string name="new_shift">New Shift</string>
    <string name="edit_shift">Edit Shift</string>
    <string name="shift_start">Shift Start:</string>
    <string name="select_start_time">Select start time</string>
    <string name="shift_end">Shift End:</string>
    <string name="select_end_time">Select end time</string>
    <string name="break_item">Break:</string>
    <string name="select_break_time">Select break time</string>
    <string name="total_item">Total:</string>
    <string name="save_button">Save</string>
    <string name="break_in_minutes">Break (In Minutes)</string>
    <string name="set_break_time">Set break time</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete_button">Delete</string>
    <string name="delete_shift_dialog">Delete Shift?</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
    <string name="time_zone_setting">Time Zone</string>
    <string name="time_zone_select_back">Time zone select back</string>
    <string name="search">Search</string>
    <string name="clear_text">clear text</string>
    <string name="go_to_top">go to top</string>
    <string name="start_of_week_setting">Start of Week</string>
    <string name="select_start_of_week">Select Start of Week</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="file_successfully_saved">File successfully saved</string>
    <string name="dismiss_snackbar">Dismiss snackbar</string>
    <string name="export_csv">Export csv</string>
    <string name="break_start">Break Start:</string>
    <string name="break_total">Break Total:</string>
    <string name="shift_saved">Shift Saved</string>
    <string name="clock_in">Clock In</string>
    <string name="clock_out">Clock Out</string>
    <string name="view_shifts">View Shifts</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="all">All</string>
    <string name="shifts">Shifts</string>
    <string name="previous">previous</string>
    <string name="all_shifts">All Shifts</string>
    <string name="next">next</string>
    <string name="date_column">Date</string>
    <string name="break_column">Break</string>
    <string name="time_column">Time</string>
    <string name="create_new_shift">Create new shift</string>
</resources>