...
data class MainUiState(
    val clockedIn: Boolean,
    val onBreak: Boolean,
    val shiftStartTime: String,
    val breakStartTime: String,
    val breakTotal: String,
    val counter: String,
    val breakCounter: String,
)

class MainViewModel(
    private val shiftsRepository: ShiftsRepository,
    private val sharedPref: SharedPreferencesRepository,
) : ViewModel() {
...
