...
        var seconds = total.get(ChronoUnit.SECONDS)
        val negative = seconds < 0
        seconds = abs(seconds)
        val minutes = seconds / (60) % 60
        val hours = seconds / (60 * 60)

        return String.format("${if (negative) "-" else ""}%d:%02d", hours, minutes)
    }

    private fun getTimeStamp(pattern: String): String {
        val time = ZonedDateTime.now(clock)
        return DateTimeFormatter.ofPattern(pattern, Locale.US).format(time)
    }
...
