...
    private val timeZoneData = listOf(
        Pair("Africa/Abidjan","Abidjan / Côte d'Ivoire"),
        Pair("Africa/Accra","Accra / Ghana"),
        Pair("Africa/Addis_Ababa","Addis Ababa / Ethiopia"),
        Pair("Australia/Adelaide","Adelaide / Australia"),
        Pair("Asia/Aden","Aden / Yemen"),
        Pair("US/Alaska","Alaska / USA"),
        Pair("Africa/Algiers","Algiers / Algeria"),
        Pair("Asia/Almaty","Almaty / Kazakhstan"),
        Pair("Asia/Amman","Amman / Jordan"),
        Pair("Europe/Amsterdam","Amsterdam / Netherlands"),
        Pair("Asia/Anadyr","Anadyr / Russia"),
        Pair("America/Anchorage","Anchorage / USA"),
...
        Pair("Atlantic/Azores","Azores / Portugal"),
        Pair("Asia/Baku","Baku / Azerbaijan"),
        Pair("Africa/Bamako","Bamako / Mali"),
        Pair("Asia/Bangkok","Bangkok / Thailand"),
        Pair("Africa/Bangui","Bangui / Gambia"),
        Pair("Asia/Beirut","Beirut / Lebanon"),
        Pair("Europe/Belgrade","Belgrade / Serbia"),
        Pair("America/Belize","Belize City / Belize"),
        Pair("Europe/Berlin","Berlin / Germany"),
        Pair("Asia/Bishkek","Bishkek / Kyrgyzstan"),
        Pair("Africa/Bissau","Bissau / Guinea Bissau"),
        Pair("America/Bogota","Bogota / Colombia"),
        Pair("America/Boise","Boise / USA"),
...
