...
    SettingsItem(
        settingName = stringResource(R.string.time_zone_setting),
        selectedItem = selectedItem,
        onClick = { showDialog.value = true },
    )

    TimeZoneSelectionDialog(
        showDialog = showDialog.value,
        onDismissRequest = { showDialog.value = false },
        onTimeZoneSelected = onItemSelected,
        setColumnHeight = setColumnHeight,
        setTouchPositionY = setTouchPositionY,
        selectedLetter = selectedLetter,
...
                    SearchBar(onDismissRequest, searchQuery)
                    Spacer(modifier = Modifier.padding(8.dp))
                    Box {
                        Row {
                            TimeZoneLazyColumn(listState, searchQuery, onTimeZoneSelected, onDismissRequest, Modifier.weight(1f))
                            if (searchQuery.value.isEmpty()) {
                                ABCBar(setColumnHeight, setTouchPositionY, touchPositionY)
                            }
                        }
                        SelectedLetterDisplay(selectedLetter, touchPositionY, Modifier.align(Alignment.CenterEnd))
                        ScrollToTopButton(listState, Modifier.align(Alignment.BottomCenter))
                    }
                }
...
